--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ server.port = 8085
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://pathdemo.cluster-cjekk0eya8b1.us-east-2.rds.amazonaws.com:3306/gcecse
+spring.datasource.url=jdbc:mysql://springdemo.cluster-cjekk0eya8b1.us-east-2.rds.amazonaws.com:3306/gcecse
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.jpa.show-sql=true
